                       [metadata]
# replace with your username:
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = osmancuet09
author_email = osmangoni14@gmail.com
description = This is a simple project for date conversion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osmancuet09/english-to-bangla-date.git
project_urls =
    Bug Tracker = https://github.com/osmancuet09/english-to-bangla-date.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6